dev-pods/dev-aman/dev-aman.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
  namespace: dev-aman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-app
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dev-app
  namespace: dev-aman
spec:
  selector:
    app: dev-app
  ports:
    - port: 80
