dev-pods/dev-aman/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-app
  namespace: dev-aman
spec:
  selector:
    app: dev-app
  ports:
    - port: 80
      targetPort: 80
